--- a/mixin.scss
+++ b/mixin.scss
@@ -5,3 +5,17 @@
     overflow-x: hidden;
 }
 
+@mixin flex ($justify, $align, $gap) {
+    display: flex;
+    justify-content: $justify;
+    align-items: $align;
+    gap: $gap;
+}
+
+@mixin font ($style, $weight, $size, $height, $color) {
+    font-style: $style;
+    font-weight: $weight;
+    font-size: $size;
+    line-height: $height;
+    color: $color;
+}
